NEXT-431 - Refactored tree component

--- a/Resources/administration/src/app/component/context-menu/sw-context-menu/sw-context-menu.less
+++ b/Resources/administration/src/app/component/context-menu/sw-context-menu/sw-context-menu.less
@@ -38,5 +38,15 @@
             font-weight: bold;
             font-size: 18px;
         }
+
+        .sw-context-menu__group {
+            padding-top: 10px;
+            margin-top: 10px;
+            border-top: 1px solid @sw-context-menu-color-border;
+
+            &:first-child {
+                border-top: 0 none;
+            }
+        }
     }
 }
