--- a/Resources/administration/src/app/component/tree/sw-tree/sw-tree.less
+++ b/Resources/administration/src/app/component/tree/sw-tree/sw-tree.less
@@ -38,7 +38,7 @@
     .sw-tree__content {
         min-height: 400px;
         max-height: 600px;
-        padding: 20px 20px 20px 0;
+        padding: 20px;
         position: relative;
         overflow: auto;
     }
