--- a/Resources/administration/src/module/sw-catalog/page/sw-catalog-detail/sw-catalog-detail.less
+++ b/Resources/administration/src/module/sw-catalog/page/sw-catalog-detail/sw-catalog-detail.less
@@ -27,6 +27,7 @@
         }
 
         .info-card__stats {
+            height: 42px;
             font-size: 34px;
             color: @color-kashmir;
 
@@ -34,6 +35,22 @@
             &.is--color-category { color: @color-category; }
             &.is--color-page { color: @color-page; }
             &.is--color-media { color: @color-media; }
+        }
+
+        .sw-loader {
+            position: relative;
+            top: 0;
+            left: 0;
+
+            .sw-loader__container {
+                height: 42px;
+                justify-content: left;
+                align-items: center;
+                align-content: center;
+                transform: none;
+                top: 0;
+                left: 0;
+            }
         }
     }
 }
