--- a/Resources/administration/src/app/component/media/sw-media-grid/sw-media-grid.less
+++ b/Resources/administration/src/app/component/media/sw-media-grid/sw-media-grid.less
@@ -8,7 +8,7 @@
     overflow-x: hidden;
     overflow-y: auto;
 
-    .sw-media-grid-content {
+    .sw-media-grid__content {
         display: grid;
         grid-gap: 10px 10px;
         justify-items: stretch;
