--- a/Resources/administration/src/app/component/media/sw-media-grid-item/sw-media-grid-item.less
+++ b/Resources/administration/src/app/component/media/sw-media-grid-item/sw-media-grid-item.less
@@ -1,11 +1,11 @@
 @import "~less/variables";
 
-@sw-media-grid-item-color-selected: @color-shopware-blue;
-@sw-media-grid-item-pseudo-padding: 15px;
+@sw-media-grid-item-color-selected:          @color-shopware-blue;
+@sw-media-grid-item-pseudo-padding:          15px;
 
 @sw-media-grid-item-color-border:            @color-steam-cloud;
 @sw-media-grid-item-color-text-inline-input: @color-gutenberg;
-@sw-media-grid-item-color-details: @color-gutenberg;
+@sw-media-grid-item-color-details:           @color-gutenberg;
 
 .sw-media-grid-item {
     position: relative;
@@ -26,7 +26,7 @@
             }
         }
 
-        .media-grid-item__content__name-container {
+        .media-grid-item__name-container {
             input[type="text"] {
                 outline: none;
                 -webkit-appearance: none;
@@ -46,19 +46,19 @@
             }
         }
 
-        .sw-media-grid-item__content__checkbox {
+        .sw-media-grid-item__checkbox {
             display:none;
             position: absolute;
             top: @sw-media-grid-item-pseudo-padding;
             left: @sw-media-grid-item-pseudo-padding;
         }
 
-        .sw-media-grid-item__content__checkbox--is-visible {
+        .checkbox-is--visible {
             display: block;
         }
     }
 
-    .sw-media-grid-item__content--isGrid {
+    .is--grid {
         padding: 10px;
 
         .sw-media-grid-item-preview {
@@ -72,7 +72,7 @@
             padding-bottom: 100%;
         }
 
-        .media-grid-item__content__name-container {
+        .media-grid-item__name-container {
             input[type="text"] {
                 text-align: center;
                 margin: 10px 0;
@@ -80,7 +80,7 @@
             }
         }
 
-        .sw-media-grid-item__content__context-button {
+        .sw-media-grid-item__context-button {
             position: absolute;
             top: @sw-media-grid-item-pseudo-padding;
             right: @sw-media-grid-item-pseudo-padding;
@@ -93,7 +93,7 @@
         }
     }
 
-    .sw-media-grid-item__content--isList {
+    .is--list {
         border: 2px solid @sw-media-grid-item-color-border;
         border-radius: 5px;
         padding: 2px 5px;
@@ -113,11 +113,11 @@
             grid-row-end: 3;
         }
 
-        .sw-media-grid-item__content--isList__details {
+        .sw-media-grid-item__details {
             color: @sw-media-grid-item-color-details;
         }
 
-        .sw-media-grid-item__content__context-button {
+        .sw-media-grid-item__context-button {
             justify-self: right;
             grid-row-start: 1;
             grid-row-end: 3;
@@ -128,7 +128,7 @@
 
 .sw-media-grid-item:hover {
     .sw-media-grid-item__content {
-        .sw-media-grid-item__content__checkbox {
+        .sw-media-grid-item__checkbox {
             display: block;
         }
     }
@@ -143,7 +143,7 @@
         }
     }
 
-    .sw-media-grid-item__content--isList {
+    .is--list {
         border: 2px solid @sw-media-grid-item-color-selected;
     }
 }
